manifests/app-istio/backend-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  labels:
    app: backend-api
    service: backend-api
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend-api
    version: 1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    app: backend-api
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
      version: 1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: backend-api
        version: 1.0.0
    spec:
      serviceAccountName: backend-api
      containers:
        - name: backend-api-container
          image: quay.io/corbsmartin/backend-api:v1-ocp
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
