manifests/app-istio/ingress-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
spec:
  host: sample-app.apps-crc.testing
  port:
    targetPort: http2
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
