manifests/app-istio/istio-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - sample-app.apps-crc.testing
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-app
spec:
  hosts:
    - sample-app.apps-crc.testing
  gateways:
    - sample-app-gateway
  http:
    - name: "backend-api-route"
      match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: backend-api
            port:
              number: 8080
    - name: "frontend-ui-route"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-ui
            port:
              number: 8080
